--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     <div class="nav-content">
       <button class="nav-btn" onclick="showPanel('download')">下载中心</button>
       <button class="nav-btn" onclick="showPanel('link')">常用网站</button>
-      <button class="nav-btn" onclick="showPanel('new')">新功能</button>
+      <button class="nav-btn" onclick="showPanel('new')">自定义</button>
     </div>
   </div>
 
