--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
         <a href="https://huxley114514.github.io/game/game1.html" 
           class="download-btn" 
           target="_blank">
-          游玩Game1
+          游玩掘地求升
         </a>
       </div>
     </div>
