--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
       
       <!-- 游戏链接（下方） -->
       <div style="text-align: center; margin-top: 20px;">
-        <a href="https://huxley114514.github.io/game/Dig-into-the-ground-for-ascension.html " 
+        <a href="https://huxley114514.github.io/game/jdqs.html " 
           class="download-btn" 
           target="_blank">
           游玩掘地求升
