--- a/index.html
+++ b/index.html
@@ -1052,7 +1052,7 @@
     /* ===== 实用功能 ===== */
     // 复制邮箱到剪贴板
     function copyEmail() {
-      navigator.clipboard.writeText('huxley@example.com')
+      navigator.clipboard.writeText('3772642249@qq.com')
         .then(() => alert('邮箱已复制到剪贴板'))
         .catch(err => console.error('复制失败:', err));
     }
